istio/traffic-shifting.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: userapi-split
spec:
  hosts:
  - "*"
  gateways:
  - userapi-gateway
  http:
  - route:
    - destination:
        host: userapi-service
        subset: v1
      weight: 80
    - destination:
        host: userapi-service
        subset: v2
      weight: 20
